2007-01-09  OHASHI Akira  <bg66@koka-in.org>

	* mixi-gnus.el (message-mixi-p): Change the pseudo header to
	`Mixi-To:'.
	(message-send-via-mixi): Ditto.

2007-01-09  OHASHI Akira  <bg66@koka-in.org>

	* mixi-gnus.el (message-mixi-p): Simplify.

2007-01-09  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-event-comment-list-regexp): Fix regexp.

2007-01-09  OHASHI Akira  <bg66@koka-in.org>

	* mixi-gnus.el: New file.

	* sb-mixi.el (shimbun-mixi-send-mail): Rename from
	`shimbun-mixi-send-mail-wrapper'.

2007-01-08  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-backend): Rename from `mixi-retrieve-function' and
	change the default value to `w3m'.
	(mixi-retrieve): Follow the change above.
	(mixi-post-form): Ditto.
	(mixi-login): Ditto.

2007-01-08  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-reply-to): New variable.
	(shimbun-reply-to): New method.
	(shimbun-mixi-make-reply-to): New function.
	(shimbun-article): Use it.
	(shimbun-mixi-make-object-from-message-id): Abolish.
	(shimbun-mixi-to-regexp): New constant.
	(shimbun-mixi-send-mail-wrapper): Follow the change above.

2006-12-30  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-event-owner-seceded-regexp): New regexp.
	(mixi-realize-event): Follow the change above.

2006-12-28  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-message-id-suffix): Abolish.
	(shimbun-mixi-make-message-id): Revert.

2006-12-28  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-send-mail-wrapper): New function.

2006-12-28  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-message-id-suffix): New constant.
	(shimbun-mixi-make-message-id): Use it and change return value.
	(shimbun-mixi-make-object-from-message-id): New function.

2006-12-28  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-logout-p): Abolish.
	(shimbun-close): Follow the change above.

2006-12-27  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-post-message-page): New macro.