@@ -1,5 +1,9 @@
 2007-01-09  OHASHI Akira  <bg66@koka-in.org>
 
+	* mixi-gnus.el (message-send-via-mixi): Don't replace twice.
+
+2007-01-09  OHASHI Akira  <bg66@koka-in.org>
+
 	* mixi-gnus.el (message-mixi-p): Change the pseudo header to
 	`Mixi-To:'.
 	(message-send-via-mixi): Ditto.
